# urlshortener

./: .pylintrc  LICENSE  README.md  main.py  migrate.sh  pyproject.toml  requirements.txt
scripts/: .env.sh  build.sh
shortener/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  utils.py  views.py
shortener/migrations/: 0001_initial.py  0002_shortener_updated.py
shortener/templates/: 404.html  429.html
urlshortener/: settings.py  urls.py
